--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=controle_de_estoque
 #o postgres do dedé ta rodando na porta 5433????
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/controle_estoque
 spring.datasource.username=postgres
-spring.datasource.password=123123
+spring.datasource.password=senai
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
